@@ -3,7 +3,7 @@ AC_INIT(src/ppracer.h)
 
 dnl Check system type
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(ppracer, "0.5alpha")
+AM_INIT_AUTOMAKE(ppracer, "0.5alpha2")
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
